Clean up config files and improve documentation
- Remove redundant mcp-config-runtime.json (hardcoded secrets)
- Update .env.example with detailed Notion database schema requirements
- Add mcp-config-runtime.json to .gitignore

All secrets now properly use environment variables via mcp-config.json

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,9 @@
 NOTION_TOKEN=your_notion_integration_token_here
 
 # Notion Database ID for tickets
-# This should be a database with properties: Name (title), Status (select), Ticket (rich_text)
+# This should be a database with the following properties:
+#   - Name (title) - Ticket name/description
+#   - Status (select) - Ticket status
+#   - Ticket (rich_text) - Ticket ID
+#   - Session ID (rich_text) - Claude session ID for resuming
 NOTION_TICKET_DB=your_notion_database_id_here
