Add metadata toggles and persistent single-ticket sessions
Two major features implemented:

1. METADATA TOGGLES (configurable via INCLUDE_METADATA env var):
   - Extract tool calls, files changed, commands, conversation from Claude session
   - Display in collapsible Notion toggle blocks after Ready checkbox
   - Toggles show:
     * 🔧 Tools Used - All tool calls with summarized parameters
     * 📝 Files Changed - Files created/modified via Edit/Write
     * 💻 Commands - Bash commands with syntax highlighting
     * 💬 Conversation Summary - User/Assistant message excerpts
   - Disabled by default, set INCLUDE_METADATA=true to enable

2. PERSISTENT SINGLE-TICKET SESSIONS:
   - One ticket per rwLOOP.sh session, reused until marked Done
   - New helper: get_or_create_session.py
     * Queries Notion for active tickets (Status != Done)
     * If found: Extracts session ID from newest ticket
     * If not found: Generates new UUID
   - rwLOOP.sh now:
     * Calls get_or_create_session.py once at startup
     * Exports CLAUDE_SESSION_ID for entire session
     * All conversations use same session/ticket
     * Picks up existing tickets on restart

Result:
- No more multiple tickets per session
- Rich metadata available when needed
- Session persists across rwLOOP.sh restarts
- Cleaner single-agent workflow

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,11 @@ NOTION_TOKEN=your_notion_integration_token_here
 #   - Ticket (rich_text) - Ticket ID
 #   - Session ID (rich_text) - Claude session ID for resuming
 NOTION_TICKET_DB=your_notion_database_id_here
+
+# Include detailed metadata in Notion tickets (true/false)
+# When enabled, adds collapsible toggles showing:
+#   - Tool calls (Edit, Write, Bash, etc.)
+#   - Files changed
+#   - Commands executed
+#   - Conversation summary
+INCLUDE_METADATA=false
