Cleanup and documentation consolidation
- Consolidated 10 MD files into 5 (README, CHANGELOG, TODO, SHORTCUT_SETUP, dashboard/README)
- Added web dashboard (FastAPI + React + Tailwind)
- Added comprehensive test suite (24 tests, 100% passing)
- Removed debug scripts and test files
- Improved .gitignore (node_modules, dist, logs, pytest_cache, vite)
- Improved documentation organization and terseness

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ __pycache__/
 *.py[cod]
 *$py.class
 *.so
+.pytest_cache/
+*.egg-info/
 
 # Runtime data
 tickets/
@@ -23,6 +25,15 @@ claude_conversations/
 
 # Testing directories
 testingClaude/
+
+# Node modules
+node_modules/
+
+# Build outputs
+dist/
+build/
+*.log
+.vite/
 
 # OS files
 .DS_Store
