--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.10"
 dependencies = [
     "notion-client>=2.0.0",
     "mcp>=0.1.0",
+    "tiktoken>=0.12.0",
 ]
 
 [tool.hatch.build.targets.wheel]
